MainConfigurator GUI almost completed

--- a/src/vois/vuetify/Tests/selectImageTest.ipynb
+++ b/src/vois/vuetify/Tests/selectImageTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "96b0027b",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73f61cf797f64743a08e7d0c890678a8",
+       "model_id": "0b5b8e541e5b4e638c86fad3b7c26772",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3472195f3714b5b946129359d5cbeee",
+       "model_id": "8781743cefb0404aadc3fdf5b2562cf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,6 +66,18 @@
     "\n",
     "display(s)\n",
     "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9448db26-099a-4887-a6d2-c34091da6dcd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s.value = -1"
    ]
   },
   {
