--- a/src/vois/templates/MainConfiguratorTest.ipynb
+++ b/src/vois/templates/MainConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "id": "96d54e79",
    "metadata": {
     "tags": []
@@ -11,12 +11,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a03a7ac80b54454488defc6fb3936f49",
+       "model_id": "c8121fa36d5a4864943a225ca8ca9107",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e56050e8cc914d39aad35e7eb23b7f61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.jp-OutputPrompt {\\n    flex: 0 0 0 !important;\\n    display: inline !important;\\n    min…"
       ]
      },
      "metadata": {},
@@ -32,10 +46,32 @@
     "settings.dark_mode      = True\n",
     "settings.color_first    = '#0d856d'\n",
     "settings.color_second   = '#a0dcd0'\n",
-    "settings.button_rounded = True\n",
+    "settings.button_rounded = False\n",
     "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
+    "\n",
+    "\n",
+    "# V.I. avoid left margin in Output widgets inside dialog-boxes!!!\n",
+    "display(HTML('''\n",
+    "<style>.jp-OutputPrompt {\n",
+    "    flex: 0 0 0 !important;\n",
+    "    display: inline !important;\n",
+    "    min-width: 0 !important;\n",
+    "}\n",
+    "\n",
+    ".vuetify-styles .v-textarea textarea {\n",
+    "    align-self: stretch;\n",
+    "    flex: 1 1 auto;\n",
+    "    line-height: 1.25rem;\n",
+    "    font-size: 13px;\n",
+    "    font-family: \"Courier New\", monospace;\n",
+    "\n",
+    ".vuetify-styles .v-label {\n",
+    "    font-size: 12px;\n",
+    "}\n",
+    "</style>'''))\n",
+    "\n",
     "\n",
     "# Create the page\n",
     "%run MainConfigurator.py\n",
@@ -48,8 +84,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "fea43a60-ca1a-4dfa-9b54-dc979ff127cf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#p.main.preview()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a4b3919c-5633-411e-aece-c97904abae2f",
+   "id": "b8ebaf29-8bcd-4ae9-b8f9-fb24d77813b7",
    "metadata": {},
    "outputs": [],
    "source": []
