--- a/src/vois/templates/mainPageTest.ipynb
+++ b/src/vois/templates/mainPageTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "906ee21e",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a738bffb3814463baf216376d359333",
+       "model_id": "4357e06bc35b4cf7bf25ce9fe5b07c44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7947203a045e4f7191110da5d7747979",
+       "model_id": "e1f0ebe8e03843cbaaed1af11588ce1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,18 +69,18 @@
     "             text_color='#222222',\n",
     "             disclaimer=disclaimer)\n",
     "\n",
-    "m = mainPage(background_image=55)\n",
+    "#m = mainPage(background_image=55)\n",
     "\n",
     "m.addButton('Function 1',\n",
     "            subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
-    "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
+    "            image='https://picsum.photos/seed/%d/400/200'%randrange(1000),\n",
     "            onclick=onclick1)\n",
     "\n",
     "m.addButton('Function 2',\n",
     "            subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
-    "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
+    "            image='https://picsum.photos/seed/%d/200/400'%randrange(1000),\n",
     "            onclick=onclick1)\n",
     "\n",
     "#for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000), subtitle='All other buttons', tooltip='Tooltip text to display on hover')\n",
