Load and Save mainPage configuration

--- a/src/vois/templates/mainPageTest.ipynb
+++ b/src/vois/templates/mainPageTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "906ee21e",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4357e06bc35b4cf7bf25ce9fe5b07c44",
+       "model_id": "10f2a6aaccae4c7695cb771a79433868",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1f0ebe8e03843cbaaed1af11588ce1d",
+       "model_id": "e57d3798e9a8408cb9d55624205b1e33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,6 +60,7 @@
     "             subtitle='Showcase how easy is to create a front page for an app',\n",
     "             credits=\"vois library development team\",\n",
     "             titlebox_widthpercent=50, titlebox_opacity=0.2, titlebox_border=2,\n",
+    "             titleshadow=True,\n",
     "             vois_show=True, vois_opacity=0.1,\n",
     "             button_widthpercent=23, button_heightpercent=14, button_elevation=16, button_opacity=0.6,\n",
     "             background_image=55,\n",
@@ -69,18 +70,18 @@
     "             text_color='#222222',\n",
     "             disclaimer=disclaimer)\n",
     "\n",
-    "#m = mainPage(background_image=55)\n",
+    "m = mainPage(background_image=55)\n",
     "\n",
     "m.addButton('Function 1',\n",
     "            subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
-    "            image='https://picsum.photos/seed/%d/400/200'%randrange(1000),\n",
+    "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
     "            onclick=onclick1)\n",
     "\n",
     "m.addButton('Function 2',\n",
     "            subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
-    "            image='https://picsum.photos/seed/%d/200/400'%randrange(1000),\n",
+    "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
     "            onclick=onclick1)\n",
     "\n",
     "#for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000), subtitle='All other buttons', tooltip='Tooltip text to display on hover')\n",
