Finalized MainConfigurator and updated version to 1.0.30

--- a/src/vois/vuetify/Tests/mainPageTest.ipynb
+++ b/src/vois/vuetify/Tests/mainPageTest.ipynb
@@ -2,12 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "906ee21e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10f2a6aaccae4c7695cb771a79433868",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e57d3798e9a8408cb9d55624205b1e33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run mainPage.py\n",
     "\n",
@@ -30,7 +59,8 @@
     "m = mainPage(title='mainPage demo',\n",
     "             subtitle='Showcase how easy is to create a front page for an app',\n",
     "             credits=\"vois library development team\",\n",
-    "             titlebox_widthpercent=50, titlebox_opacity=0.2, titlebox_border=0,\n",
+    "             titlebox_widthpercent=50, titlebox_opacity=0.2, titlebox_border=2,\n",
+    "             titleshadow=True,\n",
     "             vois_show=True, vois_opacity=0.1,\n",
     "             button_widthpercent=23, button_heightpercent=14, button_elevation=16, button_opacity=0.6,\n",
     "             background_image=55,\n",
@@ -61,12 +91,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fcb9d2e1-8fea-4717-9039-0d9c71120d63",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a52e96cc11a84e5899e461b5b62ce428",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(class_='pa-0 ma-0', layout=None, style_=\"\\n        width: 70vw; height: 70vh; \\n        ba…"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the preview of the mainPage as a card at 70% dimension\n",
     "m.preview()"
