Updated version to 1.0.32

--- a/src/vois/vuetify/Tests/mainPageTest.ipynb
+++ b/src/vois/vuetify/Tests/mainPageTest.ipynb
@@ -2,43 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "906ee21e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10f2a6aaccae4c7695cb771a79433868",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e57d3798e9a8408cb9d55624205b1e33",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run mainPage.py\n",
+    "%run ../mainPage.py\n",
     "\n",
     "from random import randrange\n",
     "from ipywidgets import widgets\n",
@@ -91,28 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "fcb9d2e1-8fea-4717-9039-0d9c71120d63",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a52e96cc11a84e5899e461b5b62ce428",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[Html(class_='pa-0 ma-0', layout=None, style_=\"\\n        width: 70vw; height: 70vh; \\n        ba…"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the preview of the mainPage as a card at 70% dimension\n",
     "m.preview()"
