--- a/src/vois/templates/Main.ipynb
+++ b/src/vois/templates/Main.ipynb
@@ -9,17 +9,18 @@
    },
    "outputs": [],
    "source": [
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
     "settings.color_first    = '#0d856d'\n",
     "settings.color_second   = '#a0dcd0'\n",
-    "settings.button_rounded = True\n",
+    "settings.button_rounded = False\n",
     "\n",
     "from ipywidgets import widgets, HTML\n",
     "\n",
-    "import mainPage\n",
-    "import PageConfigurator\n",
-    "import MainConfigurator\n",
+    "from vois.vuetify import mainPage\n",
+    "from vois.templates import PageConfigurator, MainConfigurator\n",
     "\n",
     "\n",
     "# V.I. avoid left margin in Output widgets inside dialog-boxes!!!\n",
