--- a/src/vois/templates/VoisHelpers.ipynb
+++ b/src/vois/templates/VoisHelpers.ipynb
@@ -2,18 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2a55b8c1-9043-464a-bc5a-f91e3d5a077b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9383c04ba55e4b4aa5b7ae7f1db37e15",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f8367b7ade74f328cb8e57862e9b96d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fbe123a29be74f97ac3808fb9c90f54c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
     "settings.color_first    = '#0d856d'\n",
     "settings.color_second   = '#a0dcd0'\n",
-    "settings.button_rounded = True\n",
+    "settings.button_rounded = False\n",
     "\n",
     "from ipywidgets import widgets, HTML\n",
     "\n",
