Made RangeSliderFloat and SliderFloat editable

--- a/src/vois/vuetify/Tests/rangeSliderFloatTest.ipynb
+++ b/src/vois/vuetify/Tests/rangeSliderFloatTest.ipynb
@@ -2,15 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c178a9b",
+   "execution_count": 3,
+   "id": "56352d56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80ad90871f0740c5b995d57364a1e100",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=['Select pressure level:'], class_='pa-0 ma-0 mt-4', layout=None, style_='', tag='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77a39ad21fde47e095d7d434846eb84a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run rangeSliderFloat.py\n",
+    "%run ../rangeSliderFloat.py\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -27,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc57315a",
+   "id": "63b8498c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d06c92",
+   "id": "28d267b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e57e75",
+   "id": "9f5f2fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1efd3e36",
+   "id": "295da30a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f21642",
+   "id": "a64eefa9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -99,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225df3e1",
+   "id": "1ee3fcb1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a9dd9d",
+   "id": "865648f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc4694a",
+   "id": "a13a30f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe011a11",
+   "id": "864b1ccd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9cb93f",
+   "id": "e3dcbe22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d2cc58",
+   "id": "2fe4589e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3e09e2",
+   "id": "2b367f68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ac9dda2",
+   "id": "127279c0",
    "metadata": {},
    "outputs": [],
    "source": []
