--- a/src/vois/vuetify/Tests/sliderFloatTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderFloatTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97418066",
+   "id": "157a1181",
    "metadata": {
     "tags": []
    },
@@ -20,8 +20,8 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2,\n",
-    "                labelwidth=200, resetbutton=True, showtooltip=True, onchange=onchange)\n",
+    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, maxint=200, showpercentage=False, decimals=2,\n",
+    "                labelwidth=150, resetbutton=True, showtooltip=True, onchange=onchange, editable=True)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6abf38",
+   "id": "881495cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f6a9d4",
+   "id": "34af8333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec09f7c2",
+   "id": "d849fb71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7e3bf2",
+   "id": "3059e7cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c766a23",
+   "id": "0d2cb634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd328b98",
+   "id": "6249cd76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
