Added DrawControl to geo/Map

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,56 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03ab9193a4a049388e2b51976a834a6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "019c5f696d3342a9b7674e37fe2cf415",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8839ee47745542e9a7933fe9ecf6f316",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[50, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -74,14 +30,42 @@
     "debug = widgets.Output()\n",
     "display(debug)\n",
     "\n",
-    "def onclick(lon,lat,zoom):\n",
+    "def onclick(m, lon,lat,zoom):\n",
     "    with debug:\n",
     "        print(lon,lat,zoom)\n",
     "\n",
-    "# Create the page\n",
     "%run Map.py\n",
-    "m = Map(show_overview=False, show_coordinates=True, basemapindex=1, onclick=onclick)\n",
-    "m.draw()"
+    "m = Map(show_overview=False, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
+    "\n",
+    "#m.add(ipyleaflet.TileLayer(url='https://server.arcgisonline.com/ArcGIS/rest/services/Ocean/World_Ocean_Base/MapServer/tile/{z}/{y}/{x}'))\n",
+    "m.add(ipyleaflet.TileLayer(url='https://tiles.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
+    "#m.add(ipyleaflet.TileLayer(url='http://t1.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7583b1d1-37aa-49be-9d5e-078f46d65331",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.drawctrl = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "437bf620-928c-4988-9457-387e828e0f3f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.wktstrings"
    ]
   },
   {
@@ -182,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a72262-1b7f-4d1f-ad2a-501c57771751",
+   "id": "0d3af3c9-b57b-4e46-abc5-fe3a082ec5a6",
    "metadata": {},
    "outputs": [],
    "source": []
