--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cec957a38044f36ac877322e7367e91",
+       "model_id": "dd832110f5e148a7aeb623ba72d23e00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84b37aa9316544d28e66cbbda19db085",
+       "model_id": "8a12a64ef4bd4a11b976e27548c8e44c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,6 +74,46 @@
     "#display(c.debug)\n",
     "display(c)\n",
     "#display(c.configure())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f6742954-b7d8-4b90-812f-feecedea46b3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25a485fd04754f64937c3606ae174ae3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b0173739-191c-48cf-b564-db1a53f15e21",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.color_first = 'red'"
    ]
   },
   {
