Added docs for Geo module

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d54e79",
+   "id": "0aed0a3b",
    "metadata": {
     "tags": []
    },
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7583b1d1-37aa-49be-9d5e-078f46d65331",
+   "id": "398b553d",
    "metadata": {
     "tags": []
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "437bf620-928c-4988-9457-387e828e0f3f",
+   "id": "7a7d7374",
    "metadata": {
     "tags": []
    },
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d25519-e295-4f60-865d-63f918aa3b8d",
+   "id": "e9758620",
    "metadata": {
     "tags": []
    },
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5d9c4e-fb86-4296-bd71-b5a25d5aa2ef",
+   "id": "2c997c4f",
    "metadata": {
     "tags": []
    },
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec931b8-cfec-4c72-afd0-cbea63251dd4",
+   "id": "bb0896ad",
    "metadata": {
     "tags": []
    },
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75aae338-1810-4ea5-b364-79e93a3914eb",
+   "id": "031550c0",
    "metadata": {
     "tags": []
    },
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efde5aa8-db63-45bd-851d-85da9fdaa81e",
+   "id": "a402f247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c2850e-65df-4a50-90dc-0ee5aae2d617",
+   "id": "a6fec3a6",
    "metadata": {
     "tags": []
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9890ba21-b78a-4ffc-9f02-3980790b4606",
+   "id": "e886354b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d3af3c9-b57b-4e46-abc5-fe3a082ec5a6",
+   "id": "a46fc7cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -174,9 +174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
