--- a/src/vois/geo/mapUtilsTest.ipynb
+++ b/src/vois/geo/mapUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b5b2504-d7fd-4644-8d62-c2bf6091507c",
+   "id": "87200c0b",
    "metadata": {
     "tags": []
    },
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22780c75-9ba6-4e93-949b-d86fd965ffe6",
+   "id": "9362af92",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3bb46b6-0435-4516-a66e-9f64220f2ec3",
+   "id": "4de26890",
    "metadata": {
     "tags": []
    },
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c9f9ad",
+   "id": "1e20202f",
    "metadata": {
     "tags": []
    },
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10410b6",
+   "id": "17f57df0",
    "metadata": {
     "tags": []
    },
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709818a7-d572-4c8f-a804-6461691334cb",
+   "id": "41525d82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,9 +88,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -102,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
