--- a/src/vois/vuetify/Tests/UploadImageTest.ipynb
+++ b/src/vois/vuetify/Tests/UploadImageTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9718c8ea",
+   "id": "f1f472ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0b966f",
+   "id": "5dd81bc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -40,9 +40,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
