--- a/src/vois/vuetify/Tests/UploadJsonTest.ipynb
+++ b/src/vois/vuetify/Tests/UploadJsonTest.ipynb
@@ -2,10 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9718c8ea",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "id": "d49f3623",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4415be90fe03498cb646730a3bd10931",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8b407d7d7154443a288abf209d17bb8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../../development/load_local_vois.py -w\n",
     "\n",
@@ -33,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0b966f",
+   "id": "6cd32eac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,9 +72,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -55,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
