--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,12 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0aed0a3b",
+   "execution_count": 4,
+   "id": "9c8b0e73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb8a5841752646509d55c93b372eae46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7f127402c854a2081c716e61984a279",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0bdb71756c11416185dec0cbea37ca26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[52, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -35,7 +79,8 @@
     "        print(lon,lat,zoom)\n",
     "\n",
     "%run Map.py\n",
-    "m = Map(show_overview=False, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
+    "#m = Map(show_overview=False, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
+    "m = Map(show_overview=True, center=[52,12], zoom=5, basemapindex=1)\n",
     "\n",
     "#m.add(ipyleaflet.TileLayer(url='https://server.arcgisonline.com/ArcGIS/rest/services/Ocean/World_Ocean_Base/MapServer/tile/{z}/{y}/{x}'))\n",
     "m.add(ipyleaflet.TileLayer(url='https://tiles.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
@@ -47,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398b553d",
+   "id": "cd52bcf9",
    "metadata": {
     "tags": []
    },
@@ -59,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a7d7374",
+   "id": "b4365733",
    "metadata": {
     "tags": []
    },
@@ -71,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9758620",
+   "id": "97243dfa",
    "metadata": {
     "tags": []
    },
@@ -83,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c997c4f",
+   "id": "84fef6ea",
    "metadata": {
     "tags": []
    },
@@ -108,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0896ad",
+   "id": "a99acb81",
    "metadata": {
     "tags": []
    },
@@ -120,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031550c0",
+   "id": "ec8a51c3",
    "metadata": {
     "tags": []
    },
@@ -132,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a402f247",
+   "id": "91838c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fec3a6",
+   "id": "7a90637c",
    "metadata": {
     "tags": []
    },
@@ -156,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e886354b",
+   "id": "1f724f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46fc7cd",
+   "id": "10494083",
    "metadata": {},
    "outputs": [],
    "source": []
