--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9c8b0e73",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb8a5841752646509d55c93b372eae46",
+       "model_id": "4fa7b3a548504cb182a31e08c5c7db63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7f127402c854a2081c716e61984a279",
+       "model_id": "739af7a683c34737937b926c9bccca30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,15 +39,15 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bdb71756c11416185dec0cbea37ca26",
+       "model_id": "32a0bcc8dc43404786f166b61b7bed59",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[52, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
+       "Map(center=[50, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +79,36 @@
     "        print(lon,lat,zoom)\n",
     "\n",
     "%run Map.py\n",
-    "#m = Map(show_overview=False, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
-    "m = Map(show_overview=True, center=[52,12], zoom=5, basemapindex=1)\n",
+    "m = Map(show_overview=False, show_coordinates=True) #, basemapindex=1, onclick=onclick)\n",
     "\n",
     "#m.add(ipyleaflet.TileLayer(url='https://server.arcgisonline.com/ArcGIS/rest/services/Ocean/World_Ocean_Base/MapServer/tile/{z}/{y}/{x}'))\n",
     "m.add(ipyleaflet.TileLayer(url='https://tiles.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
     "#m.add(ipyleaflet.TileLayer(url='http://t1.openseamap.org/seamark/{z}/{x}/{y}.png'))\n",
     "\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cdcf71c8-3885-4157-abf2-60b239410c86",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.zoom"
    ]
   },
   {
