geo.mapUtils docs

--- a/docs/3.3_referenceGeo.rst
+++ b/docs/3.3_referenceGeo.rst
@@ -16,6 +16,7 @@ Map module
 ----------
 
 .. automodule:: Map
+    :member-order: bysource
     :members:
     
 .. image:: figures/line.png
@@ -24,6 +25,7 @@ mapUtils module
 ---------------
 
 .. automodule:: mapUtils
+    :member-order: bysource
     :members:
     
 .. image:: figures/line.png
