Fixed small bugs in vois.templates

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,41 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd832110f5e148a7aeb623ba72d23e00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a12a64ef4bd4a11b976e27548c8e44c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Content(children=[Card(children=[HBox(children=(VBox(children=(Card(children=[Map(center=[50, 12], controls=(Z…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -57,11 +28,14 @@
     "from vois import cssUtils\n",
     "cssUtils.switchFontSize(output,14)\n",
     "\n",
-    "%run Content.py\n",
+    "import Content\n",
     "\n",
     "#c = Content(output=output, splitmode=1)\n",
     "\n",
-    "c = Content(output=output)\n",
+    "# Globally block all dialogWait of the Content module!\n",
+    "Content.dialogWaitEnabled = False\n",
+    "\n",
+    "c = Content.Content(output=output)\n",
     "\n",
     "# Read the state of the page from the .json file\n",
     "import json\n",
@@ -78,35 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f6742954-b7d8-4b90-812f-feecedea46b3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25a485fd04754f64937c3606ae174ae3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b0173739-191c-48cf-b564-db1a53f15e21",
    "metadata": {
     "tags": []
@@ -154,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a5e47b3e-3546-44cf-aa5d-1ee05538a2bd",
    "metadata": {
     "tags": []
