--- a/src/vois/templates/PlotlyChartTest.ipynb
+++ b/src/vois/templates/PlotlyChartTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c718b0bf1f748068702a60d59c3c96f",
+       "model_id": "bc182fba880b44699695c2110dd08f9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -19,7 +19,7 @@
        "PlotlyChart(children=[Card(children=[Output(layout=Layout(height='300px', width='500px'))], flat=True, height=…"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,13 +27,13 @@
    "source": [
     "%run PlotlyChart.py\n",
     "\n",
-    "pc = PlotlyChart()\n",
+    "pc = PlotlyChart(color_first='red')\n",
     "pc.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "740f50d1-1427-49ee-9125-991882c6d0c7",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bc89c04c0754882b077b6ea0b188df7",
+       "model_id": "0cdf3325340e4da591e1bc8ef3b4312e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +50,7 @@
        "Card(children=[VBox(children=(Html(children=['Plotly chart'], class_='pa-0 ma-0 mt-1 mr-3', layout=None, style…"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "54fbdfc1-a601-4134-b789-3e2e0e60a09d",
    "metadata": {
     "tags": []
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "f9bfb48e-ff83-4c83-bd6d-3602e3c11770",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "404af5fe-1fcd-4b25-a978-bbf6b1f845af",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "64dcfc84-f139-4709-b093-d63cca3eafca",
    "metadata": {},
    "outputs": [],
