Updated intro docs

--- a/src/vois/templates/VoisHelpers.ipynb
+++ b/src/vois/templates/VoisHelpers.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "m.addButton('Page Configurator',\n",
     "            subtitle='Configure content pages',\n",
-    "            tooltip='Click to open the Main Page Configurator application',\n",
+    "            tooltip='Click to open the Page Configurator application',\n",
     "            image=mainPage.getLocalImageURL('./graphics/page.png'),\n",
     "            onclick=onclickPage)\n",
     "\n",
