--- a/src/vois/templates/VoisHelpers.ipynb
+++ b/src/vois/templates/VoisHelpers.ipynb
@@ -2,12 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2a55b8c1-9043-464a-bc5a-f91e3d5a077b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c543f88f59974c2497712a4a43775cb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "027db8d487e64abea69651b7ee0c2270",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4c6e6f57f7f5486bb13f3465ff187644",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -17,7 +60,7 @@
     "\n",
     "from ipywidgets import widgets, HTML\n",
     "\n",
-    "from vois.vuetify import mainPage\n",
+    "from vois.vuetify import mainPage, dialogWait\n",
     "from vois.templates import PageConfigurator, MainConfigurator\n",
     "\n",
     "from vois import download, cssUtils\n",
@@ -32,13 +75,17 @@
     "\n",
     "# launch the mainConfigurator\n",
     "def onclickMain():\n",
+    "    dlg = dialogWait.dialogWait(text='Starting the Main Page configurator...', output=output, color=settings.color_first, dark=settings.dark_mode)\n",
     "    p = MainConfigurator.MainConfigurator(output)\n",
     "    card = p.create()\n",
     "    p.open()\n",
+    "    dlg.close()\n",
     "\n",
     "# Launch the PageConfigurator\n",
     "def onclickPage():\n",
+    "    dlg = dialogWait.dialogWait(text='Starting the Page configurator...', output=output, color=settings.color_first, dark=settings.dark_mode)\n",
     "    PageConfigurator.PageConfigurator(output)\n",
+    "    dlg.close()\n",
     "\n",
     "\n",
     "m = mainPage.mainPage(title='Vois library Helpers',\n",
