Fixed dynamicButton color

--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96d54e79",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12fa9d761c6846a2b3083a34790802bd",
+       "model_id": "45c9906c4b2345cdafaac08e163b1d6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     "\n",
     "# Create the page\n",
     "%run template1panel.py\n",
-    "p = template1panel(output)\n",
+    "p = template1panel(output, leftWidth=900)\n",
     "card = p.create()\n",
     "\n",
     "#p.titlecolor  = '#ccaaaa'\n",
